# bao-factory

./: .gitignore  .solhint-test.json  .solhint.json  README.md  foundry.toml  package.json  prettier.config.js  pyproject.toml  slither.config.json
.github/actions/test-foundry/: action.yml
.github/workflows/: CI-test-foundry-stable.yml
script/: bao-factory
src/: BaoFactory.sol  BaoFactoryBytecode.sol  BaoFactoryDeployLib.sol  BaoFactoryDeployment.sol  BaoFactoryFoundryLib.sol  BaoFactoryLib.sol  BaoFactory_v1.sol  IBaoFactory.sol  TODO-libraries.md  TODO.md  gas.txt
test/: BaoFactory.t.sol  BaoFactoryDeployment.t.sol  BaoFactorySmoke.t.sol
test/mocks/: BaoFactoryV2.sol  FundedVault.sol
